--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 }
 .App{
     height:100%;
-    background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('./image/city.jpg');
+    background:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('./image/chaotic.jpg');
     background-size: cover;
     background-position:center ;
     display: flex;
